04112022 - 18.50 - ADJUSTED RELATIVE PATHS IN CKTSIG AND CHARGER

--- a/cktsig/main.tex
+++ b/cktsig/main.tex
@@ -637,7 +637,7 @@ In the $s$ domain:
 https://github.com/DarkWake9/EE3900/blob/main/cktsig/codes/e4.3.py
 \end{lstlisting}
 \begin{figure}[!ht]
-	\includegraphics[width=\columnwidth]{/media/darkwake/VIB2/EE3900/cktsig/figs/e4.3.jpg}
+	\includegraphics[width=\columnwidth]{./figs/e4.3.jpg}
 	\caption{Plot of $H(s)$.}
 	\label{fig:Hs}
 \end{figure}
@@ -710,7 +710,7 @@ Putting T = $\frac{1}{2}$ will give \eqref{eq:Hz}\\
 	&= \frac{2}{3(1 - z^{-1})} - \frac{2\frac{\tau}{T}}{2\frac{\tau}{T}+ 1}\frac{1}{3\sbrak{1 - z^{-1}\sbrak{\frac{2\frac{\tau}{T} - 1}{2\frac{\tau}{T} + 1}}}}\\
 	&= \frac{2}{3(1 - z^{-1})} - \frac{2\frac{\tau}{T}}{2\frac{\tau}{T}+ 1}\frac{1}{3\sbrak{1 - z^{-1}\sbrak{\frac{2\tau - T}{2\tau + T}}}}
 %\end{align}
-\intertext{aking Inverse $\mathcal{Z}$ transform on both sides}
+\intertext{Taking Inverse $\mathcal{Z}$ transform on both sides}
 %\begin{align}
 v(n) &= \sbrak{\frac{2}{3} - \frac{2\tau}{3(2\tau + T	)}\brak{\frac{2\tau + T}{2\tau - T}}^n}u(n)
 \end{align}
