--- a/charger/main.tex
+++ b/charger/main.tex
@@ -205,7 +205,7 @@ Let
 \end{align}
 \begin{enumerate}[label=\thesection.\arabic*
 ,ref=\thesection.\theenumi]
-\item Plot $x(t)$.
+\item Plot $x(t)$.\\
 \solution
 \begin{lstlisting}
 https://github.com/DarkWake9/EE3900/blob/main/charger/codes/e1.1.py
@@ -215,7 +215,7 @@ https://github.com/DarkWake9/EE3900/blob/main/charger/codes/e1.1.py
 		\includegraphics[width=\columnwidth]{./figs/e1.1.pdf}
 	\end{center}
 	\captionof{figure}{}
-	\label{fig:}	
+	\label{fig:xt}	
 \end{figure}
 \item Show that $x(t)$ is periodic and find its period.
 \solution From Fig. \eqref{fig:xt}, we see that $x(t)$ is periodic. Further,
@@ -475,16 +475,17 @@ https://github.com/DarkWake9/EE3900/blob/main/charger/codes/e3.10.py
 H(f) is a \textit{Low-pass} filter which allows only the zero$^{th}$ harmonic and filters the rest.\\
 
 If $f_0$ is the cut-off frequency then an ideal Low-pass filter is described by:
-\begin{align}
+\begin{equation}
 	H(f) = \rect{\frac{f}{2f_0}} = \begin{cases}
 		1 \quad $if $ \abs{f} < f_0\\
 		0 \quad $otherwise$
 	\end{cases}
-\end{align}
+\end{equation}
 Multiplying by a scaling factor to get DC 5V,
-\begin{align}
+\begin{equation}
 	H(f) = \frac{\pi V_0}{2A_0}\rect{\frac{f}{2f_0}}
-\end{align}
+		\label{eq:Hf}
+\end{equation}
 where $V_0 = 5$ V.
 \item Find $h(t)$.\\
 \solution\\
@@ -519,7 +520,12 @@ The Gain response $G(f)$ is given by\\
 \begin{align}
 G^2(f) = |H_n(f)|^2 = \frac{1}{1 + \brak{\frac{f}{f_0}}^{2n}}
 \end{align}
-Where $f_0$ is the cutoff frequency.
+Where $f_0$ is the cutoff frequency.\\
+Gain at a frequency in dB is given as
+\begin{align}
+	A = -10\log_{10}(G^2(f)) = -20\log_{10}(H_n(f))
+\end{align}
+At $f = f0$, A = -3 dB
 \item Design a Chebyschev filter for $H(f)$.
 \solution\\
 For an $n^{th}$ order Chebyschev filter:\\
@@ -541,7 +547,7 @@ Where :
 \item $\epsilon$ is the ripple
 \end{enumerate}
 
-\item Design a circuit for your Butterworth filter.
+\item Design a circuit for your Butterworth filter.\\
 \item Design a circuit for your Chebyschev filter.
 \end{enumerate}
 
