06112022 - 14.45 - RE-COMMIT CKTSIG - FIXED RELATIVE PATHS

--- a/cktsig/main.tex
+++ b/cktsig/main.tex
@@ -224,7 +224,7 @@ becomes $q_1 \, \mu C$. Then S is switched to position Q.  After a long time, th
 $q_2 \, \mu C$.
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=\columnwidth]{.figs/ckt.jpg}
+	\includegraphics[width=\columnwidth]{./figs/ckt.jpg}
 	\caption{}
 	\label{fig:ckt}
 \end{figure}
@@ -335,7 +335,7 @@ and find the ROC.\\
 Fig. \ref{fig:ckt}
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[width=\columnwidth]{.figs/lap-ckt.jpg}
+	\includegraphics[width=\columnwidth]{./figs/lap-ckt.jpg}
 	\caption{}
 	\label{fig:lap-ckt}
 \end{figure}
@@ -368,7 +368,7 @@ Applying KCL at X:
 \item Verify your result using ngspice.\\
 \solution
 \begin{figure}[!htb]
-\includegraphics[width=\columnwidth]{.figs/e2.6.png}
+\includegraphics[width=\columnwidth]{./figs/e2.6.png}
 \caption{$v_{C_0}(t)$ before the switch is flipped}
 \label{fig:v1-t}
 \end{figure}
@@ -505,7 +505,7 @@ https://github.com/DarkWake9/EE3900/blob/main/cktsig/codes/e3.4.py
 \item Verify your result using ngspice.\\
 \solution
 \begin{figure}[!htb]
-	\includegraphics[width=\columnwidth]{.figs/e3.4.jpg}
+	\includegraphics[width=\columnwidth]{./figs/e3.4.jpg}
 	\caption{$v_{C_0}(t)$ after the switch is flipped}
 	\label{fig:v2-t}
 \end{figure}
