06112022 - 15.52 - UPDATED MAIN.TEX

--- a/cktsig/main.tex
+++ b/cktsig/main.tex
@@ -402,7 +402,6 @@ The circuit at steady state when the switch is at Q:\\
 	\label{fig:ckt-q2}
 \end{figure}
 \iffalse
-
 \begin{figure}
 	\begin{tikzpicture}
 		%		\draw[gray, thick] (1,0) -- (1,3.6); %Q
@@ -475,7 +474,7 @@ Use latex-tikz.\\
 	\caption{}
 	\label{fig:sckt-q2}
 \end{figure}
-\newline
+%\newline
 
 \item $V_{C_0}(s)$ = ?
 \solution\\
@@ -509,6 +508,7 @@ https://github.com/DarkWake9/EE3900/blob/main/cktsig/codes/e3.4.py
 	\caption{$v_{C_0}(t)$ after the switch is flipped}
 	\label{fig:v2-t}
 \end{figure}
+\vspace{2cm}
  The following ngspice script simulates the given circuit
 \begin{lstlisting}
 https://github.com/DarkWake9/EE3900/blob/main/cktsig/codes/e3.cir
@@ -641,7 +641,7 @@ https://github.com/DarkWake9/EE3900/blob/main/cktsig/codes/e4.3.py
 	\caption{Plot of $H(s)$.}
 	\label{fig:Hs}
 \end{figure}
-\vspace{3.5cm}
+%\vspace{3.5cm}
 It is a Low-Pass filter\\
 \item Using trapezoidal rule for integration, formulate the difference equation
 by considering 
