--- a/lab/main.tex
+++ b/lab/main.tex
@@ -109,11 +109,11 @@
 	\theoremstyle{remark}
 	\newtheorem{rem}{Remark}
 	\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
-	\providecommand{\abs}[1]{\left\vert#1\right\vert}
+	%\providecommand{\abs}[1]{\left\vert#1\right\vert}
 	\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
 	\providecommand{\norm}[1]{\lVert#1\rVert}
 	\providecommand{\mtx}[1]{\mathbf{#1}}
-	\providecommand{\mean}[1]{E\left[ #1 \right]}
+%	\providecommand{\mean}[1]{E\left[ #1 \right]}
 	\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
 	\providecommand{\ztrans}{\overset{\mathcal{Z}}{ \rightleftharpoons}}
 	\providecommand{\diff}[2]{\ensuremath{\frac{d{#1}}{d{#2}}}}
@@ -203,8 +203,8 @@
 	The screenshots of the waveforms at each stage are shown ahead.
 	
 	\begin{figure}[!ht]
-		\includegraphics[width=\columnwidth]{figs/transformer.jpg}
-		\caption{Output AC waveform at transformer stage across B - E 13 V peak.}
+		\includegraphics[width=\columnwidth]{figs/transformerf.jpg}
+		\caption{Output AC waveform at transformer stage across B - E 20 V peak.}
 		\label{fig:transformer}
 	\end{figure}
 	
