--- a/cktsig/main.tex
+++ b/cktsig/main.tex
@@ -368,7 +368,7 @@ Applying KCL at X:
 \item Verify your result using ngspice.\\
 \solution
 \begin{figure}[!htb]
-\includegraphics[width=\columnwidth]{./figs/e2.6.png}
+\includegraphics[width=\columnwidth]{./figs/e2.6.pdf}
 \caption{$v_{C_0}(t)$ before the switch is flipped}
 \label{fig:v1-t}
 \end{figure}
@@ -401,48 +401,7 @@ The circuit at steady state when the switch is at Q:\\
 	\caption{}
 	\label{fig:ckt-q2}
 \end{figure}
-\iffalse
-\begin{figure}
-	\begin{tikzpicture}
-		%		\draw[gray, thick] (1,0) -- (1,3.6); %Q
-		%		\draw[gray, thick] (0.75,4.4) -- (1.5,4); %S
-		\draw[gray, thick] (0,4) -- (1.5,4); %P
-		\draw[gray, thick] (1.5,4) -- (2,4); %R_1 and R_2
-		\draw[decorate,decoration=zigzag] (2,4) -- (3.5,4);
-		\draw[gray, thick] (3.5,4) -- (5.5,4);
-		\draw[decorate,decoration=zigzag] (5.5,4) -- (7,4);
-		\draw[gray, thick] (7,4) -- (8,4);
-		\draw[gray, thick] (0,0) -- (0, 4);
-		%\draw[gray, thick] (0,0) -- (0,1.95); %1V
-		%\draw[gray, thick] (0,2.25) -- (0,4);
-		%\draw[gray, thick] (-0.25,1.95) -- (0.25,1.95);
-		%\draw[gray, thick] (-0.5,2.25) -- (0.5,2.25);
-		\draw[gray, thick] (8,0) -- (8,1.95); %2V
-		\draw[gray, thick] (7.75,1.95) -- (8.25,1.95);
-		\draw[gray, thick] (7.5,2.25) -- (8.5,2.25);
-		\draw[gray, thick] (8,2.25) -- (8,4);
-		\draw[gray, thick] (4,0) -- (4,1.95); %capacitor
-		\draw[gray, thick] (4,2.25) -- (4,4);
-		\draw[gray, thick] (3.65,1.95) -- (4.35,1.95);
-		\draw[gray, thick] (3.65,2.25) -- (4.35,2.25);
-		\draw[gray, thick] (0,0) -- (8,0); %base
-		\draw[gray, thick] (4,0) -- (4, -0.5);
-		\draw[black, thick] (3.75, -0.5) -- (4.25, -0.5);
-		\draw[gray, thick] (3.82, -0.6) -- (4.18, -0.6);
-		\draw[gray, thick] (3.9, -0.7) -- (4.1, -0.7);
-		%\node[] at (-0.6,1.85) {1V};
-		\node[] at (7.4,1.85) {2V};
-		\node[] at (3.1,2) {1$\mu$F};
-%		\node[] at (0.5,3.7) {P};
-		\node[] at (1.1,4.6) {S};
-		\node[] at (4, 4.6) {X};
-		\node[] at (4.6, -0.5) {G};
-		\node[] at (0,4.57) {Q};
-		\node[] at (2.55,4.4) {1$\ohm$};
-		\node[] at (6.25,4.4) {2$\ohm$};v
-	\end{tikzpicture}
-\end{figure}
-\fi
+
 At steady state: Capacitor is charged\\
 Applying KCL at X.
 \begin{align}
@@ -629,7 +588,7 @@ In the $s$ domain:
 \begin{align}
 	\frac{V_{C_0}}{R_1} + \frac{V_{C_0}}{\frac{1}{sC_0}} + \frac{V_{C_0} - V_2}{R_2} = 0 \\
 	H(s)\brak{\frac{1}{R_1} + \frac{1}{R_2} + sC_0} = \frac{1}{R_2} \\
-	H(s) = \frac{\frac{1}{R_2}}{\frac{1}{R_1} + \frac{1}{R_2} + sC_0} = \dfrac{1}{3 + sC_0}
+	H(s) = \frac{\frac{1}{R_2}}{\frac{1}{R_1} + \frac{1}{R_2} + sC_0} = \dfrac{1}{3 + 2sC_0}
 	\label{eq:Hs}
 \end{align}
 \item Plot $H(s)$.  What kind of filter is it?\\
@@ -692,23 +651,23 @@ R.O.C: $|z| < 1$
 Apply a Bilinear Transform
 \begin{align}
 	s \rightarrow \dfrac{2}{T}\dfrac{z-1}{z+1}\\
-	H(z) = \dfrac{1}{3 + C_0\dfrac{2}{T}\dfrac{z-1}{z+1}}
+	H(z) = \dfrac{1}{3 + 2C_0\dfrac{2}{T}\dfrac{z-1}{z+1}}
 \end{align}
-Putting T = $\frac{1}{2}$ will give \eqref{eq:Hz}\\
+Putting T = 1 will give \eqref{eq:Hz}\\
 \item Find $v(n)$. Verify using ngspice and differential equation\\
 \solution\\
 \begin{align}
 	&V(z) = H(z)V_2(z)\\
-	&= \dfrac{1}{3 +  \frac{2}{T}C_0 \frac{1 - z^{-1}}{1 + z^{-1}}}\frac{2}{1 - z^{-1}}\\
-	&= \frac{2}{3}\brak{\frac{1}{1 + \frac{\tau}{T}\frac{1 - z^{-1}}{1 + z^{-1}}}\frac{1}{1 - z^{-1}}}\\
-	&= \frac{2}{3}\brak{\frac{1 + z^{-1}}{1 + z^{-1} + \frac{\tau}{T}\brak{1 - z^{-1}}} \frac{1}{1 - z^{-1}}}\\
-	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{\tau}{T}}{1 + z^{-1} + \frac{\tau}{T}\brak{1 - z^{-1}}}}\\
-	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{\tau}{T}}{1 + \frac{\tau}{T} + z^{-1}\brak{1 - \frac{\tau}{T}}}}\\
-	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{\tau}{T}}{1 + \frac{\tau}{T}} \frac{1}{1 - \brak{\frac{\frac{\tau}{T} - 1}{\frac{\tau}{T} + 1}} z^{-1}}}
+	&= \dfrac{1}{3 +  \frac{4}{T}C_0 \frac{1 - z^{-1}}{1 + z^{-1}}}\frac{2}{1 - z^{-1}}\\
+	&= \frac{2}{3}\brak{\frac{1}{1 + \frac{2\tau}{T}\frac{1 - z^{-1}}{1 + z^{-1}}}\frac{1}{1 - z^{-1}}}\\
+	&= \frac{2}{3}\brak{\frac{1 + z^{-1}}{1 + z^{-1} + \frac{2\tau}{T}\brak{1 - z^{-1}}} \frac{1}{1 - z^{-1}}}\\
+	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{2\tau}{T}}{1 + z^{-1} + \frac{2\tau}{T}\brak{1 - z^{-1}}}}\\
+	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{2\tau}{T}}{1 + \frac{2\tau}{T} + z^{-1}\brak{1 - \frac{2\tau}{T}}}}\\
+	&= \frac{2}{3}\brak{\frac{1}{1 - z^{-1}} - \frac{\frac{2\tau}{T}}{1 + \frac{2\tau}{T}} \frac{1}{1 - \brak{\frac{\frac{2\tau}{T} - 1}{\frac{2\tau}{T} + 1}} z^{-1}}}
 \end{align}
 Taking Inverse $\mathcal{Z}$ transform on both sides
 \begin{align}
-v(n) &= \frac{2}{3}u(n)\sbrak{1 - \frac{\frac{\tau}{T}}{\frac{\tau}{T} + 1}\brak{\frac{{ \frac{\tau}{T} - 1}}{{\frac{\tau}{T} + 1}}}^n}
+v(n) &= \frac{2}{3}u(n)\sbrak{1 - \frac{\frac{2\tau}{T}}{\frac{2\tau}{T} + 1}\brak{\frac{{ \frac{2\tau}{T} - 1}}{{\frac{2\tau}{T} + 1}}}^n}
 \end{align}
 \vspace{2.5cm}
 \newline
