--- a/charger/main.tex
+++ b/charger/main.tex
@@ -653,7 +653,18 @@ https://github.com/DarkWake9/EE3900/blob/main/charger/codes/e5.3.py
 	\caption{Amplitude Response of Butterworth filter.}
 	\label{fig:sim-butter}
 \end{figure}
-\vspace{2cm}
+\vspace{2.5cm}
+The circuit in \eqref{fig:sim-butter} for a 12 V input gives the following output:
+\begin{figure}[!ht]
+	\begin{center}
+		\includegraphics[width=\columnwidth]{./figs/e5.3b.pdf}
+	\end{center}
+	\captionof{figure}{}
+	\label{fig:but_out}	
+\end{figure}
+
+
+
 \item Design a circuit for your Chebyshev filter.
 \solution Looking at the table of normalized element values
 of the Chebyshev filter for order 3 and 0.5 dB ripple,
@@ -687,5 +698,15 @@ https://github.com/DarkWake9/EE3900/blob/main/charger/codes/e5.4.py
 	\caption{Amplitude Response of Chebyshev filter.}
 	\label{fig:sim-cheby}
 \end{figure}
+\vspace{2cm}
+The circuit in \eqref{fig:cheby-filter} for a 12 V input gives the following output:
+\begin{figure}[!ht]
+	\begin{center}
+		\includegraphics[width=\columnwidth]{./figs/e5.4b.pdf}
+	\end{center}
+	\captionof{figure}{}
+	\label{fig:cheb_out}	
+\end{figure}
+
 \end{enumerate}
 \end{document}
